test/good/basic/print02.px

func f(n: Int): Int def
    print n
    return n

print f(1), f(2)