test/bad/lambdas/lambda10.px

func f(): Int def
    return lambda: 0

f()
